# tech.skadi.test

./: .gitignore  README.md  build.gradle  build.gradle.kts  myvu_ble_scan.py  myvu_classic_enable.py  myvu_enable_ble.py  myvu_enable_ble_protocol.json  myvu_probe.py  myvu_verify.py  settings.gradle  settings.gradle.kts  setup.cfg
app/: build.gradle  build.gradle.kts  proguard-rules.pro
ar.app.connect/: README.md  __init__.py  config.py  connect_manager.py  usb.py
bluetooth/logs/: 1_phase_pair_connection_log.json  2_phase_after_connection_completed.json  ble_protocol_extractor.py  btsnoop_hci.log.last  commands.csv  export_for_chatGPT_analysis.json  filtered_op_code.json  filtred_full_log.json  full_for_you_filters.json  full_log.json  glasses_att.json  glasses_full_log.json  pairs.csv  parse_glasses_proto.py  (+4 more)
docs/: wireshark_connection_report.md
documents/: 01_ble_pairing.md  02_ble_gatt_handshake.md  03_classic_bluetooth_transition.md  04_classic_protocol_commands.md  05_state_machine.md  06_debug_commands_ui.md  module_podklyucheniya_k_ochkam.md
myvu_server_app/: README.md  gradlew  gradlew.bat  settings.gradle
reports/: com_upuphone_overview.md
resources/: AndroidManifest.xml  classes2.dex  classes8.dex  connect_message.proto  connect_msg_api.proto  funcIntent.json  guide_words.json  guide_words_third.json  offlineCmd.json  offlineCmdPlus.json  relay_api.proto  runasone_api.proto  share_api.proto  starry_link_encrypt.proto  starry_net_message_data.proto  test_pb_data.proto  ucar.proto
starrynet_docs/: bluetooth_protocol.md
tools/: parse_full_log.py
(+31435 files in other folders)
