[metadata]
name = ar-app-connect
version = 0.1.0
description = Laptop-side connector and media tester for smart glasses
long_description = file: README.md
long_description_content_type = text/markdown
author = UpUPhone
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    bleak>=0.21.0
    pyserial>=3.5

[options.packages.find]
where = .
